# vyrion-python

./: .gitignore  README.md  pyproject.toml
examples/: basic.py
tests/: test_vyrion.py
vyrion/: __init__.py  client.py  types.py
vyrion/analytics/: cost.py  health.py  tracker.py
vyrion/cache/: memory.py
vyrion/middleware/: compose.py
vyrion/providers/: anthropic.py  base.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py  together.py
vyrion/router/: circuit.py  fallback.py  strategies.py
