[tool.poetry]
name = "vyrion"
version = "0.1.0"
description = "Vyrion — One intelligent runtime for every LLM. Unified API, smart routing, auto failover, streaming, analytics, and cost monitoring in Python."
authors = ["Mincr Technology <hello@mincr.in>"]
readme = "README.md"
homepage = "https://mincr.in/vyrion"
repository = "https://github.com/mincrypt/vyrion"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.0"

# Optional provider SDKs
openai = { version = "^1.0.0", optional = true }
google-genai = { version = "^0.1.0", optional = true }
anthropic = { version = "^0.20.0", optional = true }
groq = { version = "^0.9.0", optional = true }

[tool.poetry.extras]
openai = ["openai"]
gemini = ["google-genai"]
anthropic = ["anthropic"]
groq = ["groq"]
all = ["openai", "google-genai", "anthropic", "groq"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
